# libultragui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
examples/: CMakeLists.txt  ultragui_anim_demo  ultragui_lottie_demo
examples/anim_demo/: main.cc  main.cpp
examples/anim_demo/anims/: checkmark.uganim  loading.uganim  pulse.uganim  spinner.uganim
examples/demo/: main.cc  main.cpp
examples/embed_gl/: main.cc
examples/embed_opengl3/: main.cc
examples/embed_vulkan/: main.cc
examples/game_overlay/: hud.lua  hud.ugui  main.cc
examples/lottie_demo/: main.cc  main.cpp
examples/lottie_demo/anims/: bounce.json  pulse.json  spinner.json  wave.json
examples/showcase/: logic.lua  main.cc  main.cpp  ui.ugui
examples/showcase/scenes/: cosmos.lua  cosmos.ugui  dashboard.lua  dashboard.ugui  glass.lua  glass.ugui  meridian.lua  meridian.ugui  neon.lua  neon.ugui  nerv.lua  nerv.ugui  rpg_menu.lua  rpg_menu.ugui  terminal.lua  terminal.ugui
examples/video_demo/: main.cc
include/ultragui/: pipeline.h  ui_context.h  ultragui.h  ultragui_config.h
include/ultragui/anim/: anim_types.h  json.h  vector_animation.h
include/ultragui/animation/: animator.h
include/ultragui/audio/: audio.h  audio_backend.h
include/ultragui/backends/: ugui_impl_vulkan.h
include/ultragui/core/: arena.h  color.h  config.h  math.h  rect.h  string_utils.h  string_view.h  types.h
include/ultragui/idl/: builder.h  parser.h
include/ultragui/input/: input.h  input_queue.h
include/ultragui/layout/: layout.h  layout_tree.h
include/ultragui/lottie/: lottie.h
include/ultragui/platform/: platform.h
include/ultragui/render/: draw_data.h  paint.h  renderer2d.h  vertex.h
include/ultragui/rhi/: rhi.h  rhi_types.h
include/ultragui/scripting/: lua_anim.h  lua_audio.h  lua_lottie.h  lua_runtime.h  lua_video.h  lua_widgets.h  script_runtime.h
include/ultragui/style/: enums.h  property_types.h  style.h  theme.h  transition.h
include/ultragui/svg/: svg.h
include/ultragui/text/: text_engine.h
include/ultragui/video/: video.h
include/ultragui/widgets/: button.h  checkbox.h  context_menu.h  dropdown.h  image.h  message_box.h  modal.h  panel.h  radio.h  rich_text.h  scroll_view.h  slider.h  text.h  text_input.h  toggle.h  (+3 more)
shaders/: quad.frag  quad.vert  text.frag  text.vert  video.frag  video.vert
shaders/hlsl/: quad.hlsl  text.hlsl  video.hlsl
src/: ui_context.cc  ui_context.cpp
src/anim/: anim_eval.cc  anim_eval.cpp  anim_parser.cc  anim_parser.cpp  anim_render.cc  anim_render.cpp  json.cc  json.cpp  vector_animation.cc  vector_animation.cpp
src/animation/: animator.cc  animator.cpp
src/audio/: audio.cc  audio.cpp
src/backends/: ugui_impl_vulkan.cc
src/core/: arena.cc  arena.cpp  string_utils.cc  string_utils.cpp
src/idl/: builder.cc  builder.cpp  parser.cc  parser.cpp
src/input/: input.cc  input.cpp
src/layout/: layout.cc  layout.cpp  layout_tree.cc  layout_tree.cpp
src/lottie/: lottie.cc  lottie.cpp
src/platform/: platform_glfw.cc  platform_glfw.cpp  platform_open_url.cc
src/render/: paint.cc  paint.cpp  renderer2d.cc  renderer2d.cpp
src/scripting/: lua_anim.cc  lua_anim.cpp  lua_audio.cc  lua_audio.cpp  lua_lottie.cc  lua_lottie.cpp  lua_runtime.cc  lua_runtime.cpp  lua_video.cc  lua_widgets.cc  lua_widgets.cpp  script_runtime_none.cc
src/style/: style.cc  style.cpp  transition.cc  transition.cpp
src/svg/: svg.cc  svg.cpp  svg_parser.cc  svg_parser.cpp  svg_rasterizer.cc  svg_rasterizer.cpp  svg_types.h
src/text/: text_engine.cc  text_engine.cpp
src/video/: video.cc
src/widgets/: button.cc  button.cpp  checkbox.cc  context_menu.cc  dropdown.cc  image.cc  image.cpp  message_box.cc  modal.cc  panel.cc  panel.cpp  radio.cc  rich_text.cc  scroll_view.cc  scroll_view.cpp  slider.cc  text.cc  text.cpp  text_input.cc  toggle.cc  widget.cc  widget.cpp  widget_tree.cc  widget_tree.cpp
tests/: CMakeLists.txt  test_audio.cc  test_audio.cpp  test_lottie.cc  test_lottie.cpp  test_runtime_safety.cc  test_svg.cc  test_svg.cpp
ugui/: pipeline.h  ui_context.cc  ui_context.h  ultragui.h
ugui/anim/: anim_eval.cc  anim_parser.cc  anim_render.cc  anim_types.h  json.cc  json.h  vector_animation.cc  vector_animation.h
ugui/animation/: animator.cc  animator.h
ugui/audio/: audio.cc  audio.h  audio_backend.h  miniaudio_impl.cc
ugui/backends/: ugui_impl_miniaudio.cc  ugui_impl_miniaudio.h  ugui_impl_opengl3.cc  ugui_impl_opengl3.h  ugui_impl_vulkan.cc  ugui_impl_vulkan.h
ugui/core/: arena.cc  arena.h  color.h  component_store.h  export.h  from_chars_compat.h  handle.h  math.h  rect.h  string_utils.cc  string_utils.h  string_view.h  types.h
ugui/idl/: builder.cc  builder.h  parser.cc  parser.h
ugui/input/: input.cc  input.h  input_queue.h
ugui/layout/: layout.cc  layout.h  layout_tree.cc  layout_tree.h
ugui/lottie/: lottie.cc  lottie.h
ugui/platform/: platform.h  platform_glfw.cc  platform_open_url.cc
ugui/render/: draw_data.h  paint.cc  paint.h  renderer2d.cc  renderer2d.h  texture_backend.h  vertex.h
ugui/rhi/: rhi.h  rhi_texture_backend.h  rhi_types.h
ugui/scripting/: lua_anim.cc  lua_anim.h  lua_audio.cc  lua_lottie.cc  lua_lottie.h  lua_runtime.cc  lua_video.cc  lua_video.h  lua_widgets.cc  lua_widgets.h  script_runtime.h  script_runtime_none.cc
ugui/style/: enums.h  property_types.h  style.cc  style.h  theme.h  transition.cc  transition.h
ugui/svg/: svg.cc  svg.h  svg_parser.cc  svg_rasterizer.cc  svg_types.h
ugui/text/: text_engine.cc  text_engine.h
ugui/video/: video.cc  video.h
ugui/widgets/: button.cc  button.h  checkbox.cc  checkbox.h  components.h  context_menu.cc  context_menu.h  dropdown.cc  dropdown.h  image.cc  image.h  message_box.cc  message_box.h  modal.cc  modal.h  panel.cc  panel.h  radio.cc  radio.h  rich_text.cc  rich_text.h  scroll_view.cc  scroll_view.h  slider.cc  slider.h  text.cc  text.h  text_input.cc  text_input.h  toggle.cc  toggle.h  widget.cc  widget.h  widget_context.h  widget_registry.cc  widget_registry.h  widget_tree.cc  widget_tree.h  widget_vtable.cc  widget_vtable.h
(+10 files in other folders)
